--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.5.0",
+    "exifr": "^7.1.3",
     "vue": "^3.3.4",
     "vue3-carousel": "^0.3.1"
   },
