--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@raffaelesgarro/vue-use-sound": "2.0.4",
     "@vueuse/core": "^10.5.0",
     "exifr": "^7.1.3",
     "vue": "^3.3.4",
